--- a/gb/17/4/8/n9016043.md
+++ b/gb/17/4/8/n9016043.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“大白旗”冤案：中国病毒学家汤飞凡</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/04/939b19e133935996020e3354a38080bd-560x400.jpg" />
-<h6>中国第一代病毒学家汤飞凡纪念邮票（网路图片）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2017年04月08日讯】（大纪元记者叶蓁报导）他是成功分离出沙眼病毒的第一人，解决了困扰世界数千年的传染病；他是中国第一代病毒学专家，创造了一个个不可能的医学奇迹；然而在中共的“<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%8B%94%E7%99%BD%E6%97%97.md#1">拔白旗</a>”运动中，他成为污言秽语下的冤魂。</p>
+	<p>【大纪元2017年04月08日讯】（大纪元记者叶蓁报导）他是成功分离出沙眼病毒的第一人，解决了困扰世界数千年的传染病；他是中国第一代病毒学专家，创造了一个个不可能的医学奇迹；然而在中共的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%94%E7%99%BD%E6%97%97.md#1">拔白旗</a>”运动中，他成为污言秽语下的冤魂。</p>
 <p>中国科学技术史权威李约瑟赞叹他是“人类的朋友”“预防医学领域里的一位顽强的战士”；当今世界最权威的微生物学教科书、病理学教科书，都记载着他为世界医学做出的不朽贡献。在中国大陆，他也重获一定的声名与荣誉，但他的故事及个中辛酸正在被国人遗忘。</p>
-<p>他就是清末民初的医学界泰斗——<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B1%A4%E9%A3%9E%E5%87%A1.md#1">汤飞凡</a>。</p>
-<figure id="attachment_9016069" style="width: 352px" class="wp-caption aligncenter"><img class=" wp-image-9016069" src="https://i.epochtimes.com/assets/uploads/2017/04/0e93928b37dc50b13e37a15d663c1851-450x610.jpg" alt="中国第一代病毒学家汤飞凡。（网路图片）" width="352" b="477" /><figcaption class="wp-caption-text">中国第一代病毒学家<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B1%A4%E9%A3%9E%E5%87%A1.md#1">汤飞凡</a>（网路图片）</figcaption></figure>
+<p>他就是清末民初的医学界泰斗——<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%A4%E9%A3%9E%E5%87%A1.md#1">汤飞凡</a>。</p>
+<figure id="attachment_9016069" aria-describedby="caption-attachment-9016069" style="width: 352px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/04/0e93928b37dc50b13e37a15d663c1851-450x610.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-9016069" src="https://i.epochtimes.com/assets/uploads/2017/04/0e93928b37dc50b13e37a15d663c1851-450x610.jpg" alt="中国第一代病毒学家汤飞凡。（网路图片）" width="352" b="477" /></a><figcaption id="caption-attachment-9016069" class="wp-caption-text">中国第一代病毒学家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%A4%E9%A3%9E%E5%87%A1.md#1">汤飞凡</a>（网路图片）</figcaption></figure>
 <h2><strong>少怀悬壶济世心</strong></h2>
 <p>汤飞凡出生的那一年，正值湖南家乡大旱。自幼目睹乡亲贫病交迫的他，遂生悬壶济世之心。在他6岁时，汤父遵守易子而教的古训，把他送到世交何家的义塾学习。何家的少爷——何键，即后来国民革命军的上将，对勤勉求学的汤飞凡青睐有加，不仅亲自辅导他算数和自然，更将女儿许配于他。怀高远之志、结将门之亲，预示了汤飞凡传奇却坎坷的一生。</p>
 <p>1914年，教会学校湘雅医学院首次在全国招生，年仅17岁的汤飞凡立即放弃在读的工业学校，参加考试。七年的专业训练，不仅磨练了他刻苦治学的精神，更让他对行医救人有了具体目标。时值微生物学的黄金期，汤飞凡在时代感召下，立志终生研究细菌学及传染病。</p>
@@ -17,7 +16,7 @@
 <p>经校方推荐，他又获得在哈佛医学院细菌系深造的机会。出国前，他与何二小姐何琏成婚，夫妻俩同赴美国。汤飞凡没有选择当一名普通医生，而是步入崎岖而清苦的科学之路，成为哈佛投身病毒学研究的第一个中国人。又是三年的进修时光，包括他在内的哈佛人扮演着拓荒者的角色，证明病毒的微生物特性，以及寻找相关测定方法。</p>
 <p>毕业后，他的导师再三请他留校，优越的生活条件、先进的研究环境及病毒学展露的前景，的确让他向往。然而曾任湘雅医学院院长的颜福庆寄来一封信，改变了他的选择。颜福庆矢志创办中国独立的医学教育体系，促成中山大学医学院的成立。然而在经费、师资紧缺的情况下，百废待兴，他想到了曾经的优秀学生汤飞凡。</p>
 <p>在信中，颜福庆开不出诱人的条件，只是如实告知办学困难以及发展中国医学的殷切期望。这封真挚坦诚的信彻底打动了汤飞凡，一股“天将降大任于斯人”的爱国豪情油然而生。他立即在1929年春天，携妻子飞往上海，出任医学院细菌系教授。</p>
-<figure id="attachment_9016071" style="width: 348px" class="wp-caption aligncenter"><img class=" wp-image-9016071" src="https://i.epochtimes.com/assets/uploads/2017/04/83b9ced0b4ce8603dc9095ad3826d0bc-450x648.jpg" alt="1921年，汤飞凡毕业于湘雅医学专科学校。（网路图片）" width="348" b="501" /><figcaption class="wp-caption-text">1921年，汤飞凡毕业于湘雅医学专科学校。（网路图片）</figcaption></figure>
+<figure id="attachment_9016071" aria-describedby="caption-attachment-9016071" style="width: 348px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/04/83b9ced0b4ce8603dc9095ad3826d0bc-450x648.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-9016071" src="https://i.epochtimes.com/assets/uploads/2017/04/83b9ced0b4ce8603dc9095ad3826d0bc-450x648.jpg" alt="1921年，汤飞凡毕业于湘雅医学专科学校。（网路图片）" width="348" b="501" /></a><figcaption id="caption-attachment-9016071" class="wp-caption-text">1921年，汤飞凡毕业于湘雅医学专科学校。（网路图片）</figcaption></figure>
 <h2><strong>中国病毒学的拓荒者</strong></h2>
 <p>中山大学医学院开学时，只有8位老师，29个预科学生，而汤飞凡所在的细菌系则是一片空白。他再次成为一名拓荒者，亲自设计课程、建立实验室，在教学之余进行研究。1930年起，他陆续发表论文，开启中国病毒学研究。</p>
 <p>两年后，他兼任英国雷氏德研究所的细菌系主任，有条件从事更复杂的实验。在上海的八年教学与科研生活中，汤飞凡在病毒学领域的研究有重大突破，多篇论文被世界权威专著及教科书援引，成为经典文献。如果历史允许，汤飞凡凭借他对医学的热情、坚韧不拔的精神与严谨的治学态度，一定会取得更为惊人的成就。然而1937年爆发的抗战，打断了他的研究计划。</p>
@@ -27,7 +26,7 @@
 <p>刚接手的中央防疫处，财政困难、设备不齐、产能低下、人心涣散，犹如一盘散沙。汤飞凡便重整旗鼓，带领有限的人员生产狂犬疫苗、牛痘苗等简单的药剂，维持日常开支并有盈余；随后把防疫处变成国内唯一的微生物研究所，生产符合国际标准的疫苗和血清。所制药品不仅送往全国各地，还为英美盟军所用，为世界二战的胜利作出贡献。</p>
 <p>国民政府下属的中央防疫处因此名扬海内外。1934年，《科学》杂志发表文章介绍了其青霉素生产车间的艰苦条件：“没有自来水，只有一台又旧又漏、而且每天用完后都要修理的锅炉；用过的琼脂要回收使用，回收的设备是一只破木船，放在湖里进行透析；没有商品蛋白胨供应，完全自己制造……”汤飞凡带领防疫处的勇士们，克服重重阻力，做出了世界为之惊叹的成绩。</p>
 <p>抗战胜利后，汤飞凡随防疫处迁回北京旧址，重建战火后的家园。他在美国的资助下建成占地万余平方米的中央防疫实验处总处，又凭借一套小型青霉素制造设备，建立中国第一个抗生素生产车间。1948年，他主持生产每支20万单位的青霉素，堪比进口产品。可以说，没有汤飞凡的努力，就没有中国病毒学的飞跃性发展。</p>
-<figure id="attachment_9016075" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-9016075 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/04/b10d2598598b345101981af9ac6cda12-450x319.jpg" alt="汤飞凡身后获国际眼科防治组织颁发的沙眼金质奖章。（网路图片）" width="450" b="319" /><figcaption class="wp-caption-text">汤飞凡身后获国际眼科防治组织颁发的沙眼金质奖章。（网路图片）</figcaption></figure>
+<figure id="attachment_9016075" aria-describedby="caption-attachment-9016075" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/04/b10d2598598b345101981af9ac6cda12-450x319.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-9016075 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/04/b10d2598598b345101981af9ac6cda12-450x319.jpg" alt="汤飞凡身后获国际眼科防治组织颁发的沙眼金质奖章。（网路图片）" width="450" b="319" /></a><figcaption id="caption-attachment-9016075" class="wp-caption-text">汤飞凡身后获国际眼科防治组织颁发的沙眼金质奖章。（网路图片）</figcaption></figure>
 <h2><strong>汤氏病毒与衣原体之父的荣耀</strong></h2>
 <p>转眼就到国共内战、中共篡权之时，汤飞凡作为科技精英、国民政府官员、国民党贵婿，远离中共的掌控才是明智之举。随着国民政府的撤退，防疫处无法正常运作，他也打算举家移居美国，重返哈佛。然而在出国前夕，他突然改变了主意，回到北京。在他心中，自己只是个专注科技领域的学者，并不关心政治；他更舍不得中国刚刚起步的微生物学，舍不得放弃辛苦创建的基业。</p>
 <p>而中共在建政之初，也亟需汤飞凡这样的医学奇才“建设国家”；大陆民众饱受各种传染病折磨，更需要大量的疫苗供应。汤飞凡便被委以“重任”，担任中共中央卫生部生物制品研究所所长、中共中央生物制品检定所所长。他也竭尽所能，为恢复疫苗的研发与生产而忘我工作。</p>
@@ -39,10 +38,10 @@
 <p>有成员催促他立刻发表论文，抢占世界之先。然而治学严谨的汤飞凡却知道，病原体必须经过重复分离、体外传代、引起病变等论证，才能称作真正的病原。因而他不为名利所动，又花费1年心血完成论证工作，才于1956年10月发表论文。</p>
 <p>为保万无一失，汤飞凡不顾自身安危，把沙眼病毒植入自己体内，并在身患沙眼的情况下，坚持40天不治疗。凭借“神农尝百草”的无畏精神，他成功积累了第一手宝贵而可靠的临床资料，彻底结束病毒学界的争论。</p>
 <p>他的论文一经发表，立即成为世界瞩目的焦点，各个国家先后用他的方法分离出沙眼病毒，尊称这种病毒为“汤氏病毒”。1970年，学界将沙眼病毒与其它几种类似的微生物命名为“衣原体”，而汤飞凡，正是公认的“衣原体之父”。由于找到了沙眼病原，对症下药也就水到渠成，沙眼疾病在全球范围迅速减少，几近绝迹。</p>
-<figure id="attachment_9016078" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-9016078" src="https://i.epochtimes.com/assets/uploads/2017/04/a0c5da5b4be0a1c7d18f6e43661e6f69-450x346.jpg" alt="汤飞凡生活照。（网路图片）" width="450" b="346" /><figcaption class="wp-caption-text">汤飞凡生活照（网路图片）</figcaption></figure>
+<figure id="attachment_9016078" aria-describedby="caption-attachment-9016078" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/04/a0c5da5b4be0a1c7d18f6e43661e6f69-450x346.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-9016078" src="https://i.epochtimes.com/assets/uploads/2017/04/a0c5da5b4be0a1c7d18f6e43661e6f69-450x346.jpg" alt="汤飞凡生活照。（网路图片）" width="450" b="346" /></a><figcaption id="caption-attachment-9016078" class="wp-caption-text">汤飞凡生活照（网路图片）</figcaption></figure>
 <h2><strong>医学名宿的迅速陨落</strong></h2>
-<p>就在汤飞凡创造微生物学奇迹之时，迫害知识分子的“反右运动”也随即展开。由于汤飞凡沉浸实验室的小天地中，无暇参与政治活动，因而暂时免受冲击。而1958年，继“反右运动”后，中共又大搞“大跃进”，同时在思想、文化领域掀起“<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%8B%94%E7%99%BD%E6%97%97.md#1">拔白旗</a>、插红旗”运动。这一年，成为汤飞凡的受难殒命之年。</p>
-<p>“拔白旗”即拔资产阶级白旗，把具有所谓资产阶级学术观点的人士加以批判、斗争，是<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%BF%AB%E5%AE%B3.md#1">中共迫害</a>知识分子、加强文化专制的又一残忍手段。在大陆医学界，大部分“白旗”是躲过“反右”一劫的知名学者。在卫生部的生物制品所，德高望重的汤飞凡就是一面在劫难逃的“大白旗”。</p>
+<p>就在汤飞凡创造微生物学奇迹之时，迫害知识分子的“反右运动”也随即展开。由于汤飞凡沉浸实验室的小天地中，无暇参与政治活动，因而暂时免受冲击。而1958年，继“反右运动”后，中共又大搞“大跃进”，同时在思想、文化领域掀起“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%94%E7%99%BD%E6%97%97.md#1">拔白旗</a>、插红旗”运动。这一年，成为汤飞凡的受难殒命之年。</p>
+<p>“拔白旗”即拔资产阶级白旗，把具有所谓资产阶级学术观点的人士加以批判、斗争，是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%BF%AB%E5%AE%B3.md#1">中共迫害</a>知识分子、加强文化专制的又一残忍手段。在大陆医学界，大部分“白旗”是躲过“反右”一劫的知名学者。在卫生部的生物制品所，德高望重的汤飞凡就是一面在劫难逃的“大白旗”。</p>
 <p>1958年9月下旬起，汤飞凡就接到所里党委的通知，要求他检查资产阶级思想，接受群众批判。26日，他不得已在一个小型会议上作检讨，但是“群众”认为他交待的都是无关痛痒的小事，不能过关。</p>
 <p>28、29日两天，汤飞凡在“全体党团员大会”继续检讨。为了“帮助”他过关，所里的中共组织还私下安排批判发言，对他“万箭齐发”。两天之内，大会从“和风细雨”转向“狂风暴雨”，起初他还能坐着交待问题，第二天就只剩挨批斗的份儿。随着气氛愈发紧张，他的罪名也逐步升级，先是“资产阶级学术权威”“社会主义阵地上的一面大白旗”，接着是“民族败类”“国民党反对派的忠实走狗”“美国特务”等。</p>
 <p>更荒谬的是，他研究沙眼病毒的成果，被说成是把病毒、分离方法送给外国人，“出卖国家利益”。29日散会时，主持人不依不饶地咆哮：“坦白交代低头认罪才有出路，不然死路一条。”</p>
@@ -54,49 +53,46 @@
 <p>参考资料：</p>
 <p>京虎子，《中国人不应遗忘的名字汤飞凡》，收录于二闲堂网站。</p>
 <p>责任编辑：李沐恩</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/4/3/n8997657.md#1">近代社会学家潘光旦的“4S遗言”</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/3/20/n8946300.md#1">两代精英成右派 地质学家谢家荣饮恨文革</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/3/17/n8936534.md#1">“大右派”储安平的生死谜案</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/3/2/n8866965.md#1">陈梦家——为传统汉字殒命的悲壮文人</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/2/20/n8831493.md#1">梁思成林徽因 才子佳人与中国古建筑</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/2/20/n8831384.md#1">文革中惨遭灭门的海归博士萧光琰</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/7/27/n8143459.md#1">张东园：中共迫害文化精英实录（三）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/11/12/5/n3448653.md#1">黄河清：汤飞凡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/12/5/n3448653.md#1">黄河清：汤飞凡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/7/27/n8143459.md#1">张东园：中共迫害文化精英实录（三）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/2/20/n8831384.md#1">文革中惨遭灭门的海归博士萧光琰</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/2/20/n8831493.md#1">梁思成林徽因 才子佳人与中国古建筑</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/11/3/9/n3191948.md#1">傅国涌：潘光旦：自由先于主义</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/25/n9768373.md#1" target="_blank">北京女三中第一个共产党员的悲剧人生</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9817670.md#1" target="_blank">汉清：百年沧桑</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/5/n2105459.md#1" target="_blank">纪实报告：法轮大法真相</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948158.md#1">【现场视频】湖北襄阳菜农夜色中卖菜</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947678.md#1">【现场视频】武汉江岸区又有人跳楼</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/8/n9016043.htm">“大白旗”冤案：中国病毒学家汤飞凡</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/8/n9016043.htm">“大白旗”冤案：中国病毒学家汤飞凡</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/17/4/8/n9016043.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/4/8/n9016043.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
